# axon

./: .env.example  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  axum.md  log.txt
backend/migrations/: 20251209064838_initial_setup.sql  20260202000000_initial_setup.sql  20260202141239_initial_setup.sql
backend/src/: auth.rs  lib.rs  main.rs  models.rs
backend/src/entities/: message.rs  mod.rs  prelude.rs  room.rs  room_member.rs  user.rs
backend/tests/: ts_export.rs
docs/: ER.md  ITゼミ論文24jy0236.docx  coding-standards.md  deploy.md  entity-relationship-diagram.md  environment.md  pages.md  specification.md  start-guide.md  tips.md  todo.md  教育用チャットツール仕様書.md  環境構築.md  配置図.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  eslint.config.mjs  next.config.ts  nextjs.md  package-lock.json  package.json  tsconfig.json
frontend/app/: error.tsx  layout.tsx  page.tsx  providers.tsx
frontend/app/login/: page.tsx
frontend/app/room/[roomId]/: page.tsx
frontend/components/: AuthGuard.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: createRoom.ts  firebase.ts
frontend/lib/api/: rooms.ts
frontend/lib/schemas/: models.ts  room.ts
