[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
dotenvy = "0.15"
uuid = { version = "1.10.0", features = ["v7", "serde", "v4"] }
ts-rs = { version = "10.0", features = ["uuid-impl", "chrono-impl"] }
jsonwebtoken = "9.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
rand = "0.8"
once_cell = "1.19"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
] }
